--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,12 +346,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
     "glEnable(GL_TEXTURE_2D)\n",
-    "qtd_texturas = 10\n",
+    "qtd_texturas = 20\n",
     "textures = glGenTextures(qtd_texturas)\n",
     "\n",
     "def load_texture_from_file(texture_id, img_textura):\n",
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,15 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo cube.obj. Vertice inicial: 0\n",
-      "Processando modelo cube.obj. Vertice final: 36\n"
+      "Processando modelo cube.obj. Vertice inicial: 0\nProcessando modelo cube.obj. Vertice final: 36\n"
      ]
     }
    ],
@@ -428,15 +427,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo terreno.obj. Vertice inicial: 36\n",
-      "Processando modelo terreno.obj. Vertice final: 42\n"
+      "Processando modelo terreno.obj. Vertice inicial: 36\nProcessando modelo terreno.obj. Vertice final: 42\n"
      ]
     }
    ],
@@ -462,15 +460,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo terreno.obj. Vertice inicial: 42\n",
-      "Processando modelo terreno.obj. Vertice final: 48\n"
+      "Processando modelo terreno.obj. Vertice inicial: 42\nProcessando modelo terreno.obj. Vertice final: 48\n"
      ]
     }
    ],
@@ -496,27 +493,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 337,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Processando modelo casa.obj. Vertice inicial: 48\n",
-      "Processando modelo casa.obj. Vertice final: 1482\n"
+      "metal_dark_brown vertice inicial:  48\n",
+      "metal_grey vertice inicial:  469614\n",
+      "wood_brown vertice inicial:  571212\n",
+      "plaster_light_brown vertice inicial:  580680\n",
+      "plaster_sand vertice inicial:  582855\n",
+      "plate_grey vertice inicial:  583815\n",
+      "wood_balls_brown vertice inicial:  583845\n",
+      "foundation_brown_brick vertice inicial:  584181\n",
+      "glass_window vertice inicial:  585417\n",
+      "Processando modelo casa.obj. Vertice final: 585513\n"
      ]
     }
    ],
    "source": [
-    "modelo = load_model_from_file('casa/casa.obj')\n",
+    "modelo = load_model_from_file('casa-moderna/casa-moderna.obj')\n",
     "\n",
     "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo casa.obj. Vertice inicial:',len(vertices_list))\n",
     "ini_casa = len(vertices_list)\n",
+    "vertices_text = []\n",
+    "faces_visited = []\n",
+    "text_id = [2,5,6,7,8,9,10,11,12]\n",
     "for face in modelo['faces']:\n",
+    "    if face[2] not in faces_visited:\n",
+    "        print(face[2], 'vertice inicial: ', len(vertices_list))\n",
+    "        faces_visited.append(face[2])\n",
+    "        vertices_text.append(len(vertices_list))\n",
     "    for vertice_id in face[0]:\n",
     "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
     "    for texture_id in face[1]:\n",
@@ -524,25 +537,33 @@
     "print('Processando modelo casa.obj. Vertice final:',len(vertices_list))\n",
     "fim_casa = len(vertices_list)\n",
     "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
-    "\n",
+    "    \n",
+    "vertices_text.append(fim_casa)\n",
     "\n",
     "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(2,'casa/casa.jpg')\n"
+    "load_texture_from_file(2,'casa-moderna/metal_dark_brown.jpg')\n",
+    "load_texture_from_file(5,'casa-moderna/metal_grey.jpg')\n",
+    "load_texture_from_file(6,'casa-moderna/wood_brown.jpg')\n",
+    "load_texture_from_file(7,'casa-moderna/plaster_light_brown.jpg')\n",
+    "load_texture_from_file(8,'casa-moderna/plaster_sand.jpg')\n",
+    "load_texture_from_file(9,'casa-moderna/plate_grey.jpg')\n",
+    "load_texture_from_file(10,'casa-moderna/wood_balls_brown.jpg')\n",
+    "load_texture_from_file(11,'casa-moderna/foundation_brown_brick.jpg')\n",
+    "load_texture_from_file(12,'casa-moderna/glass_window.jpg')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 338,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo monstro.obj. Vertice inicial: 1482\n",
-      "Processando modelo monstro.obj. Vertice final: 241530\n"
+      "Processando modelo monstro.obj. Vertice inicial: 585513\nProcessando modelo monstro.obj. Vertice final: 825561\n"
      ]
     }
    ],
@@ -579,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +730,7 @@
     "    t_x = 0.0; t_y = -1.01; t_z = 0.0;\n",
     "    \n",
     "    # escala\n",
-    "    s_x = 20.0; s_y = 20.0; s_z = 20.0;\n",
+    "    s_x = 40.0; s_y = 40.0; s_z = 40.0;\n",
     "    \n",
     "    mat_model = model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z)\n",
     "    loc_model = glGetUniformLocation(program, \"model\")\n",
@@ -736,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,29 +771,25 @@
     "    r_x = 0.0; r_y = 0.0; r_z = 1.0;\n",
     "    \n",
     "    # translacao\n",
-    "    t_x = 0.0; t_y = -1.0; t_z = 0.0;\n",
+    "    t_x = -8.0; t_y = -1.0; t_z = 5.0;\n",
     "    \n",
     "    # escala\n",
-    "    s_x = 1.0; s_y = 1.0; s_z = 1.0;\n",
+    "    s_x = 3.0; s_y = 3.0; s_z = 3.0;\n",
     "    \n",
     "    mat_model = model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z)\n",
     "    loc_model = glGetUniformLocation(program, \"model\")\n",
     "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
-    "       \n",
-    "    #define id da textura do modelo\n",
-    "    glBindTexture(GL_TEXTURE_2D, 2)\n",
     "    \n",
     "    \n",
-    "    # desenha o modelo\n",
-    "    glDrawArrays(GL_TRIANGLES, ini_casa, fim_casa-ini_casa) ## renderizando\n",
-    "    \n",
-    "\n",
+    "    for i in range(0, len(text_id)):\n",
+    "        glBindTexture(GL_TEXTURE_2D, text_id[i])\n",
+    "        glDrawArrays(GL_TRIANGLES, vertices_text[i], vertices_text[i+1]-vertices_text[i]) ## renderizando\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,9 +1045,8 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
