--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1843,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1844,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1845,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1846,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1847,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1848,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1849,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1850,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1851,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1852,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1853,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1854,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1855,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,15 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1856,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo cube.obj. Vertice inicial: 0\n",
-      "Processando modelo cube.obj. Vertice final: 36\n"
+      "Processando modelo cube.obj. Vertice inicial: 0\nProcessando modelo cube.obj. Vertice final: 36\n"
      ]
     }
    ],
@@ -428,15 +427,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1857,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo terreno.obj. Vertice inicial: 36\n",
-      "Processando modelo terreno.obj. Vertice final: 42\n"
+      "Processando modelo terreno.obj. Vertice inicial: 36\nProcessando modelo terreno.obj. Vertice final: 42\n"
      ]
     }
    ],
@@ -462,15 +460,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1858,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo terreno.obj. Vertice inicial: 42\n",
-      "Processando modelo terreno.obj. Vertice final: 48\n"
+      "Processando modelo terreno.obj. Vertice inicial: 42\nProcessando modelo terreno.obj. Vertice final: 48\n"
      ]
     }
    ],
@@ -496,17 +493,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1859,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo casa.obj. Vertice inicial: 48\n",
-      "Processando modelo casa.obj. Vertice final: 1482\n"
+      "Processando modelo casa.obj. Vertice inicial: 48\nProcessando modelo casa.obj. Vertice final: 1482\n"
      ]
     }
    ],
@@ -532,15 +528,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1860,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo sofa.obj. Vertice inicial: 1482\n",
-      "Processando modelo sofa.obj. Vertice final: 6294\n"
+      "Processando modelo sofa.obj. Vertice inicial: 1482\nProcessando modelo sofa.obj. Vertice final: 6294\n"
      ]
     }
    ],
@@ -565,45 +560,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1861,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"modelo = load_model_from_file('caveira/caveira.obj')\\n\\n### inserindo vertices do modelo no vetor de vertices\\nprint('Processando modelo caveira.obj. Vertice inicial:',len(vertices_list))\\nini_caveira = len(vertices_list)\\nfor face in modelo['faces']:\\n    for vertice_id in face[0]:\\n        vertices_list.append( modelo['vertices'][vertice_id-1] )\\n    for texture_id in face[1]:\\n        textures_coord_list.append( modelo['texture'][texture_id-1] )\\nprint('Processando modelo caveira.obj. Vertice final:',len(vertices_list))\\nfim_caveira = len(vertices_list)\\n### inserindo coordenadas de textura do modelo no vetor de texturas\\n\\n\\n### carregando textura equivalente e definindo um id (buffer): use um id por textura!\\nload_texture_from_file(3,'caveira/Skull.jpg')\\n\""
-      ]
-     },
-     "execution_count": 1861,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"modelo = load_model_from_file('caveira/caveira.obj')\n",
-    "\n",
-    "### inserindo vertices do modelo no vetor de vertices\n",
-    "print('Processando modelo caveira.obj. Vertice inicial:',len(vertices_list))\n",
-    "ini_caveira = len(vertices_list)\n",
-    "for face in modelo['faces']:\n",
-    "    for vertice_id in face[0]:\n",
-    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
-    "    for texture_id in face[1]:\n",
-    "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
-    "print('Processando modelo caveira.obj. Vertice final:',len(vertices_list))\n",
-    "fim_caveira = len(vertices_list)\n",
-    "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
-    "\n",
-    "\n",
-    "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(3,'caveira/Skull.jpg')\n",
-    "\"\"\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -616,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1862,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1863,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1864,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1865,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1866,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,39 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1867,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def desenha_sofa():\n",
-    "    \n",
-    "    # rotacao\n",
-    "    angle = 0.0;\n",
-    "    r_x = 0.0; r_y = 1.0; r_z = 0.0;\n",
-    "    \n",
-    "    # translacao\n",
-    "    t_x = 0.0; t_y = -0.9; t_z = -5.5;\n",
-    "    \n",
-    "    # escala\n",
-    "    s_x = 0.6; s_y = 0.6; s_z = 0.6;\n",
-    "    \n",
-    "    mat_model = model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z)\n",
-    "    loc_model = glGetUniformLocation(program, \"model\")\n",
-    "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
-    "       \n",
-    "    #define id da textura do modelo\n",
-    "    glBindTexture(GL_TEXTURE_2D, 5)\n",
-    "    \n",
-    "    # desenha o modelo\n",
-    "    glDrawArrays(GL_TRIANGLES, ini_sofa, fim_sofa-ini_sofa) ## renderizando\n",
-    "    \n",
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1868,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,10 +759,36 @@
     "    # desenha o modelo\n",
     "    glDrawArrays(GL_TRIANGLES, ini_casa, fim_casa-ini_casa) ## renderizando\n",
     "    \n",
-    "    desenha_sofa()\n",
+    "    desenha_sofa()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def desenha_sofa():\n",
     "    \n",
-    "\n",
-    "    "
+    "    # rotacao\n",
+    "    angle = 0.0;\n",
+    "    r_x = 0.0; r_y = 1.0; r_z = 0.0;\n",
+    "    \n",
+    "    # translacao\n",
+    "    t_x = 0.0; t_y = -0.9; t_z = -5.5;\n",
+    "    \n",
+    "    # escala\n",
+    "    s_x = 0.6; s_y = 0.6; s_z = 0.6;\n",
+    "    \n",
+    "    mat_model = model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z)\n",
+    "    loc_model = glGetUniformLocation(program, \"model\")\n",
+    "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "       \n",
+    "    #define id da textura do modelo\n",
+    "    glBindTexture(GL_TEXTURE_2D, 5)\n",
+    "    \n",
+    "    # desenha o modelo\n",
+    "    glDrawArrays(GL_TRIANGLES, ini_sofa, fim_sofa-ini_sofa) ## renderizando"
    ]
   },
   {
@@ -853,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1869,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1870,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1871,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1872,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,9 +1013,8 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
