--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1843,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1844,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1845,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1846,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1847,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1848,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1849,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1850,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1851,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1852,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1853,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1854,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1855,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1856,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1857,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1858,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1859,
+   "execution_count": 47,
    "metadata": {
     "scrolled": false
    },
@@ -554,15 +554,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1860,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Processando modelo sofa.obj. Vertice inicial: 1482\n",
-      "Processando modelo sofa.obj. Vertice final: 6294\n"
+      "Processando modelo sofa.obj. Vertice inicial: 1482\nProcessando modelo sofa.obj. Vertice final: 6294\n"
      ]
     }
    ],
@@ -588,20 +587,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1861,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "\"modelo = load_model_from_file('caveira/caveira.obj')\\n\\n### inserindo vertices do modelo no vetor de vertices\\nprint('Processando modelo caveira.obj. Vertice inicial:',len(vertices_list))\\nini_caveira = len(vertices_list)\\nfor face in modelo['faces']:\\n    for vertice_id in face[0]:\\n        vertices_list.append( modelo['vertices'][vertice_id-1] )\\n    for texture_id in face[1]:\\n        textures_coord_list.append( modelo['texture'][texture_id-1] )\\nprint('Processando modelo caveira.obj. Vertice final:',len(vertices_list))\\nfim_caveira = len(vertices_list)\\n### inserindo coordenadas de textura do modelo no vetor de texturas\\n\\n\\n### carregando textura equivalente e definindo um id (buffer): use um id por textura!\\nload_texture_from_file(3,'caveira/Skull.jpg')\\n\""
       ]
      },
-     "execution_count": 1861,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 49
     }
    ],
    "source": [
@@ -638,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1862,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1863,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1864,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1865,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1866,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1867,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1868,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,25 +842,21 @@
     "    r_x = 0.0; r_y = 0.0; r_z = 1.0;\n",
     "    \n",
     "    # translacao\n",
-    "    t_x = 0.0; t_y = -1.0; t_z = 0.0;\n",
+    "    t_x = -8.0; t_y = -1.0; t_z = 5.0;\n",
     "    \n",
     "    # escala\n",
-    "    s_x = 1.0; s_y = 1.0; s_z = 1.0;\n",
+    "    s_x = 3.0; s_y = 3.0; s_z = 3.0;\n",
     "    \n",
     "    mat_model = model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z)\n",
     "    loc_model = glGetUniformLocation(program, \"model\")\n",
     "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
-    "       \n",
-    "    #define id da textura do modelo\n",
-    "    glBindTexture(GL_TEXTURE_2D, 2)\n",
     "    \n",
     "    \n",
-    "    # desenha o modelo\n",
-    "    glDrawArrays(GL_TRIANGLES, ini_casa, fim_casa-ini_casa) ## renderizando\n",
+    "    for i in range(0, len(text_id)):\n",
+    "        glBindTexture(GL_TEXTURE_2D, text_id[i])\n",
+    "        glDrawArrays(GL_TRIANGLES, vertices_text[i], vertices_text[i+1]-vertices_text[i]) ## renderizando\n",
     "    \n",
     "    desenha_sofa()\n",
-    "    \n",
-    "\n",
     "    "
    ]
   },
@@ -877,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1869,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1870,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1871,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,9 +1024,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1872,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'text_id' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-60-911de1b41f4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mdesenha_caixa\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mdesenha_terreno\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0mdesenha_casa\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mrotacao_inc\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-56-4264b970867a>\u001b[0m in \u001b[0;36mdesenha_casa\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0mglBindTexture\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGL_TEXTURE_2D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtext_id\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0mglDrawArrays\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGL_TRIANGLES\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvertices_text\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvertices_text\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mvertices_text\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m## renderizando\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'text_id' is not defined"
+     ]
+    }
+   ],
    "source": [
     "glEnable(GL_DEPTH_TEST) ### importante para 3D\n",
     "   \n",
