--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -561,7 +561,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Processando modelo sofa.obj. Vertice inicial: 1482\nProcessando modelo sofa.obj. Vertice final: 6294\n"
+      "Processando modelo sofa.obj. Vertice inicial: 585513\nProcessando modelo sofa.obj. Vertice final: 590325\n"
      ]
     }
    ],
@@ -582,7 +582,7 @@
     "\n",
     "\n",
     "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(5,'sofa/sofa.jpg')\n"
+    "load_texture_from_file(13,'sofa/sofa.jpg')\n"
    ]
   },
   {
@@ -815,14 +815,10 @@
     "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
     "       \n",
     "    #define id da textura do modelo\n",
-    "    glBindTexture(GL_TEXTURE_2D, 5)\n",
+    "    glBindTexture(GL_TEXTURE_2D, 13)\n",
     "    \n",
     "    # desenha o modelo\n",
     "    glDrawArrays(GL_TRIANGLES, ini_sofa, fim_sofa-ini_sofa) ## renderizando\n",
-    "    \n",
-    "    for i in range(0, len(text_id)):\n",
-    "        glBindTexture(GL_TEXTURE_2D, text_id[i])\n",
-    "        glDrawArrays(GL_TRIANGLES, vertices_text[i], vertices_text[i+1]-vertices_text[i]) ## renderizando\n",
     "    "
    ]
   },
@@ -854,9 +850,7 @@
     "    \n",
     "    for i in range(0, len(text_id)):\n",
     "        glBindTexture(GL_TEXTURE_2D, text_id[i])\n",
-    "        glDrawArrays(GL_TRIANGLES, vertices_text[i], vertices_text[i+1]-vertices_text[i]) ## renderizando\n",
-    "    \n",
-    "    desenha_sofa()\n",
+    "        glDrawArrays(GL_TRIANGLES, vertices_text[i], vertices_text[i+1]-vertices_text[i]) ## renderizandos\n",
     "    "
    ]
   },
@@ -1026,20 +1020,7 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'text_id' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-60-911de1b41f4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mdesenha_caixa\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mdesenha_terreno\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0mdesenha_casa\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mrotacao_inc\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-56-4264b970867a>\u001b[0m in \u001b[0;36mdesenha_casa\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0mglBindTexture\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGL_TEXTURE_2D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtext_id\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0mglDrawArrays\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGL_TRIANGLES\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvertices_text\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvertices_text\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mvertices_text\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m## renderizando\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'text_id' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "glEnable(GL_DEPTH_TEST) ### importante para 3D\n",
     "   \n",
@@ -1064,6 +1045,7 @@
     "    desenha_caixa()   \n",
     "    desenha_terreno()\n",
     "    desenha_casa()\n",
+    "    desenha_sofa()\n",
     "    \n",
     "    rotacao_inc += 0.1\n",
     "  \n",
