--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,15 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo cube.obj. Vertice inicial: 0\n",
-      "Processando modelo cube.obj. Vertice final: 36\n"
+      "Processando modelo cube.obj. Vertice inicial: 0\nProcessando modelo cube.obj. Vertice final: 36\n"
      ]
     }
    ],
@@ -428,15 +427,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo terreno.obj. Vertice inicial: 36\n",
-      "Processando modelo terreno.obj. Vertice final: 42\n"
+      "Processando modelo terreno.obj. Vertice inicial: 36\nProcessando modelo terreno.obj. Vertice final: 42\n"
      ]
     }
    ],
@@ -462,15 +460,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo terreno.obj. Vertice inicial: 42\n",
-      "Processando modelo terreno.obj. Vertice final: 48\n"
+      "Processando modelo terreno.obj. Vertice inicial: 42\nProcessando modelo terreno.obj. Vertice final: 48\n"
      ]
     }
    ],
@@ -496,14 +493,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Processando modelo casa.obj. Vertice inicial: 48\n",
       "metal_dark_brown vertice inicial:  48\n",
@@ -557,15 +554,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo sofa.obj. Vertice inicial: 585513\n",
-      "Processando modelo sofa.obj. Vertice final: 590325\n"
+      "Processando modelo sofa.obj. Vertice inicial: 585513\nProcessando modelo sofa.obj. Vertice final: 590325\n"
      ]
     }
    ],
@@ -590,45 +586,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 493,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"modelo = load_model_from_file('caveira/caveira.obj')\\n\\n### inserindo vertices do modelo no vetor de vertices\\nprint('Processando modelo caveira.obj. Vertice inicial:',len(vertices_list))\\nini_caveira = len(vertices_list)\\nfor face in modelo['faces']:\\n    for vertice_id in face[0]:\\n        vertices_list.append( modelo['vertices'][vertice_id-1] )\\n    for texture_id in face[1]:\\n        textures_coord_list.append( modelo['texture'][texture_id-1] )\\nprint('Processando modelo caveira.obj. Vertice final:',len(vertices_list))\\nfim_caveira = len(vertices_list)\\n### inserindo coordenadas de textura do modelo no vetor de texturas\\n\\n\\n### carregando textura equivalente e definindo um id (buffer): use um id por textura!\\nload_texture_from_file(3,'caveira/Skull.jpg')\\n\""
-      ]
-     },
-     "execution_count": 493,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"modelo = load_model_from_file('caveira/caveira.obj')\n",
-    "\n",
-    "### inserindo vertices do modelo no vetor de vertices\n",
-    "print('Processando modelo caveira.obj. Vertice inicial:',len(vertices_list))\n",
-    "ini_caveira = len(vertices_list)\n",
-    "for face in modelo['faces']:\n",
-    "    for vertice_id in face[0]:\n",
-    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
-    "    for texture_id in face[1]:\n",
-    "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
-    "print('Processando modelo caveira.obj. Vertice final:',len(vertices_list))\n",
-    "fim_caveira = len(vertices_list)\n",
-    "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
-    "\n",
-    "\n",
-    "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(3,'caveira/Skull.jpg')\n",
-    "\"\"\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -641,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,9 +1038,8 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
