--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -408,7 +408,6 @@
    "source": [
     "modelo = load_model_from_file('caixa/caixa.obj')\n",
     "\n",
-    "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo cube.obj. Vertice inicial:',len(vertices_list))\n",
     "ini_caixa = len(vertices_list)\n",
     "for face in modelo['faces']:\n",
@@ -418,10 +417,7 @@
     "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
     "print('Processando modelo cube.obj. Vertice final:',len(vertices_list))\n",
     "fim_caixa = len(vertices_list)\n",
-    "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
     "\n",
-    "\n",
-    "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
     "load_texture_from_file(0,'caixa/caixa2.jpg')\n"
    ]
   },
@@ -441,7 +437,6 @@
    "source": [
     "modelo = load_model_from_file('terreno/pedra.obj')\n",
     "\n",
-    "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo terreno.obj. Vertice inicial:',len(vertices_list))\n",
     "ini_pedra = len(vertices_list)\n",
     "for face in modelo['faces']:\n",
@@ -451,10 +446,7 @@
     "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
     "print('Processando modelo terreno.obj. Vertice final:',len(vertices_list))\n",
     "fim_pedra = len(vertices_list)\n",
-    "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
     "\n",
-    "\n",
-    "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
     "load_texture_from_file(1,'terreno/pedra.jpg')\n"
    ]
   },
@@ -474,7 +466,6 @@
    "source": [
     "modelo = load_model_from_file('terreno/grama.obj')\n",
     "\n",
-    "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo terreno.obj. Vertice inicial:',len(vertices_list))\n",
     "ini_grama = len(vertices_list)\n",
     "for face in modelo['faces']:\n",
@@ -484,10 +475,7 @@
     "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
     "print('Processando modelo terreno.obj. Vertice final:',len(vertices_list))\n",
     "fim_grama = len(vertices_list)\n",
-    "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
     "\n",
-    "\n",
-    "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
     "load_texture_from_file(4,'terreno/grama.jpg')\n"
    ]
   },
@@ -519,7 +507,6 @@
    "source": [
     "modelo = load_model_from_file('casa-moderna/casa-moderna.obj')\n",
     "\n",
-    "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo casa.obj. Vertice inicial:',len(vertices_list))\n",
     "ini_casa = len(vertices_list)\n",
     "vertices_text = []\n",
@@ -536,11 +523,9 @@
     "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
     "print('Processando modelo casa.obj. Vertice final:',len(vertices_list))\n",
     "fim_casa = len(vertices_list)\n",
-    "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
     "    \n",
     "vertices_text.append(fim_casa)\n",
     "\n",
-    "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
     "load_texture_from_file(2,'casa-moderna/metal_dark_brown.jpg')\n",
     "load_texture_from_file(5,'casa-moderna/metal_grey.jpg')\n",
     "load_texture_from_file(6,'casa-moderna/wood_brown.jpg')\n",
@@ -555,7 +540,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "output_type": "stream",
@@ -568,7 +555,6 @@
    "source": [
     "modelo = load_model_from_file('sofa/sofa.obj')\n",
     "\n",
-    "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo sofa.obj. Vertice inicial:',len(vertices_list))\n",
     "ini_sofa = len(vertices_list)\n",
     "for face in modelo['faces']:\n",
@@ -578,11 +564,38 @@
     "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
     "print('Processando modelo sofa.obj. Vertice final:',len(vertices_list))\n",
     "fim_sofa = len(vertices_list)\n",
-    "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
     "\n",
+    "load_texture_from_file(13,'sofa/sofa.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Processando modelo sofa.obj. Vertice inicial: 590325\n",
+      "Processando modelo sofa.obj. Vertice final: 1263093\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo = load_model_from_file('tv/tv.obj')\n",
     "\n",
-    "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(13,'sofa/sofa.jpg')\n"
+    "print('Processando modelo sofa.obj. Vertice inicial:',len(vertices_list))\n",
+    "ini_tv = len(vertices_list)\n",
+    "for face in modelo['faces']:\n",
+    "    for vertice_id in face[0]:\n",
+    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
+    "    for texture_id in face[1]:\n",
+    "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
+    "print('Processando modelo sofa.obj. Vertice final:',len(vertices_list))\n",
+    "fim_tv = len(vertices_list)\n",
+    "\n",
+    "load_texture_from_file(14,'tv/tv.png')"
    ]
   },
   {
@@ -816,6 +829,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def desenha_tv():\n",
+    "    \n",
+    "    # rotacao\n",
+    "    angle = -270.0;\n",
+    "    r_x = 0.0; r_y = 1.0; r_z = 0.0;\n",
+    "    \n",
+    "    # translacao\n",
+    "    t_x = -3.5; t_y = -0.9; t_z = -5.0;\n",
+    "    \n",
+    "    # escala\n",
+    "    s_x = 0.6; s_y = 0.6; s_z = 0.6;\n",
+    "    \n",
+    "    mat_model = model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z)\n",
+    "    loc_model = glGetUniformLocation(program, \"model\")\n",
+    "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "       \n",
+    "    #define id da textura do modelo\n",
+    "    glBindTexture(GL_TEXTURE_2D, 14)\n",
+    "    \n",
+    "    # desenha o modelo\n",
+    "    glDrawArrays(GL_TRIANGLES, ini_tv, fim_tv-ini_tv) ## renderizando"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -827,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,16 +1043,14 @@
     "    if polygonal_mode==False:\n",
     "        glPolygonMode(GL_FRONT_AND_BACK,GL_FILL)\n",
     "    \n",
-    "    \n",
     "\n",
     "    desenha_caixa()   \n",
     "    desenha_terreno()\n",
     "    desenha_casa()\n",
     "    desenha_sofa()\n",
+    "    desenha_tv()\n",
     "    \n",
     "    rotacao_inc += 0.1\n",
-    "  \n",
-    "\n",
     "    \n",
     "    mat_view = view()\n",
     "    loc_view = glGetUniformLocation(program, \"view\")\n",
@@ -1019,8 +1059,6 @@
     "    mat_projection = projection()\n",
     "    loc_projection = glGetUniformLocation(program, \"projection\")\n",
     "    glUniformMatrix4fv(loc_projection, 1, GL_FALSE, mat_projection)    \n",
-    "    \n",
-    "    \n",
     "\n",
     "    \n",
     "    glfw.swap_buffers(window)\n",
