Create table and duck

--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 941,
+   "execution_count": 1262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 942,
+   "execution_count": 1263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 943,
+   "execution_count": 1264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 944,
+   "execution_count": 1265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 945,
+   "execution_count": 1266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 946,
+   "execution_count": 1267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 947,
+   "execution_count": 1268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 948,
+   "execution_count": 1269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 949,
+   "execution_count": 1270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 950,
+   "execution_count": 1271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 951,
+   "execution_count": 1272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 952,
+   "execution_count": 1273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 953,
+   "execution_count": 1274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,43 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 954,
+   "execution_count": 1275,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Processando modelo cube.obj. Vertice inicial: 0\nProcessando modelo cube.obj. Vertice final: 36\n"
-     ]
-    }
-   ],
-   "source": [
-    "modelo = load_model_from_file('caixa/caixa.obj')\n",
-    "\n",
-    "print('Processando modelo cube.obj. Vertice inicial:',len(vertices_list))\n",
-    "ini_caixa = len(vertices_list)\n",
-    "for face in modelo['faces']:\n",
-    "    for vertice_id in face[0]:\n",
-    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
-    "    for texture_id in face[1]:\n",
-    "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
-    "print('Processando modelo cube.obj. Vertice final:',len(vertices_list))\n",
-    "fim_caixa = len(vertices_list)\n",
-    "\n",
-    "load_texture_from_file(0,'caixa/caixa2.jpg')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 955,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Processando modelo terreno.obj. Vertice inicial: 36\nProcessando modelo terreno.obj. Vertice final: 42\n"
+      "Processando modelo terreno.obj. Vertice inicial: 0\nProcessando modelo terreno.obj. Vertice final: 6\n"
      ]
     }
    ],
@@ -452,14 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 956,
+   "execution_count": 1276,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Processando modelo terreno.obj. Vertice inicial: 42\nProcessando modelo terreno.obj. Vertice final: 48\n"
+      "Processando modelo terreno.obj. Vertice inicial: 6\nProcessando modelo terreno.obj. Vertice final: 12\n"
      ]
     }
    ],
@@ -481,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 957,
+   "execution_count": 1277,
    "metadata": {
     "scrolled": false
    },
@@ -490,17 +461,17 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Processando modelo casa.obj. Vertice inicial: 48\n",
-      "metal_dark_brown vertice inicial:  48\n",
-      "metal_grey vertice inicial:  469614\n",
-      "wood_brown vertice inicial:  571212\n",
-      "plaster_light_brown vertice inicial:  580680\n",
-      "plaster_sand vertice inicial:  582855\n",
-      "plate_grey vertice inicial:  583815\n",
-      "wood_balls_brown vertice inicial:  583845\n",
-      "foundation_brown_brick vertice inicial:  584181\n",
-      "glass_window vertice inicial:  585417\n",
-      "Processando modelo casa.obj. Vertice final: 585513\n"
+      "Processando modelo casa.obj. Vertice inicial: 12\n",
+      "metal_dark_brown vertice inicial:  12\n",
+      "metal_grey vertice inicial:  469578\n",
+      "wood_brown vertice inicial:  571176\n",
+      "plaster_light_brown vertice inicial:  580644\n",
+      "plaster_sand vertice inicial:  582819\n",
+      "plate_grey vertice inicial:  583779\n",
+      "wood_balls_brown vertice inicial:  583809\n",
+      "foundation_brown_brick vertice inicial:  584145\n",
+      "glass_window vertice inicial:  585381\n",
+      "Processando modelo casa.obj. Vertice final: 585477\n"
      ]
     }
    ],
@@ -539,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 958,
+   "execution_count": 1278,
    "metadata": {
     "scrolled": true
    },
@@ -548,7 +519,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Processando modelo sofa.obj. Vertice inicial: 585513\nProcessando modelo sofa.obj. Vertice final: 590325\n"
+      "Processando modelo sofa.obj. Vertice inicial: 585477\nProcessando modelo sofa.obj. Vertice final: 590289\n"
      ]
     }
    ],
@@ -570,15 +541,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 959,
+   "execution_count": 1279,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Processando modelo sofa.obj. Vertice inicial: 590325\n",
-      "Processando modelo sofa.obj. Vertice final: 1263093\n"
+      "Processando modelo sofa.obj. Vertice inicial: 590289\n",
+      "Processando modelo sofa.obj. Vertice final: 1263057\n"
      ]
     }
    ],
@@ -600,14 +571,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 960,
+   "execution_count": 1280,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Processando modelo arvore.obj. Vertice inicial: 1263093\nMateriais.001 vertice inicial:  1263093\nMateriais vertice inicial:  1350789\nProcessando modelo arvore.obj. Vertice final: 1408317\n[1263093, 1350789, 1408317]\n"
+      "Processando modelo arvore.obj. Vertice inicial: 1263057\nMateriais.001 vertice inicial:  1263057\nMateriais vertice inicial:  1350753\nProcessando modelo arvore.obj. Vertice final: 1408281\n[1263057, 1350753, 1408281]\n"
      ]
     }
    ],
@@ -640,6 +611,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1281,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Processando modelo pato.obj. Vertice inicial: 1408281\nProcessando modelo pato.obj. Vertice final: 1460793\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo = load_model_from_file('pato/pato.obj')\n",
+    "\n",
+    "print('Processando modelo pato.obj. Vertice inicial:',len(vertices_list))\n",
+    "ini_pato = len(vertices_list)\n",
+    "for face in modelo['faces']:\n",
+    "    for vertice_id in face[0]:\n",
+    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
+    "    for texture_id in face[1]:\n",
+    "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
+    "print('Processando modelo pato.obj. Vertice final:',len(vertices_list))\n",
+    "fim_pato = len(vertices_list)\n",
+    "\n",
+    "load_texture_from_file(17,'pato/pato.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1282,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Processando modelo mesa.obj. Vertice inicial: 1460793\nProcessando modelo mesa.obj. Vertice final: 1469547\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo = load_model_from_file('mesa/mesa.obj')\n",
+    "\n",
+    "print('Processando modelo mesa.obj. Vertice inicial:',len(vertices_list))\n",
+    "ini_mesa = len(vertices_list)\n",
+    "for face in modelo['faces']:\n",
+    "    for vertice_id in face[0]:\n",
+    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
+    "    for texture_id in face[1]:\n",
+    "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
+    "print('Processando modelo mesa.obj. Vertice final:',len(vertices_list))\n",
+    "fim_mesa = len(vertices_list)\n",
+    "\n",
+    "load_texture_from_file(18,'mesa/mesa.png')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -652,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 961,
+   "execution_count": 1283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 962,
+   "execution_count": 1284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 963,
+   "execution_count": 1285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 964,
+   "execution_count": 1286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 965,
+   "execution_count": 1287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 966,
+   "execution_count": 1288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 967,
+   "execution_count": 1289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 968,
+   "execution_count": 1290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +912,7 @@
     "    r_x = 0.0; r_y = 1.0; r_z = 0.0;\n",
     "    \n",
     "    # translacao\n",
-    "    t_x = -3.5; t_y = -0.9; t_z = -5.0;\n",
+    "    t_x = -3.5; t_y = 1.1; t_z = -4.5;\n",
     "    \n",
     "    # escala\n",
     "    s_x = 0.6; s_y = 0.6; s_z = 0.6;\n",
@@ -901,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 969,
+   "execution_count": 1291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,6 +959,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1292,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def desenha_pato():\n",
+    "    \n",
+    "    # rotacao\n",
+    "    angle = 0.0;\n",
+    "    r_x = -5.0; r_y = 1.0; r_z = 0.0;\n",
+    "    \n",
+    "    # translacao\n",
+    "    t_x = -20; t_y = -1.0; t_z = 9.0;\n",
+    "    \n",
+    "    # escala\n",
+    "    s_x = 0.3; s_y = 0.3; s_z = 0.3;\n",
+    "    \n",
+    "    mat_model = model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z)\n",
+    "    loc_model = glGetUniformLocation(program, \"model\")\n",
+    "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "       \n",
+    "    #define id da textura do modelo\n",
+    "    glBindTexture(GL_TEXTURE_2D, 17)\n",
+    "    \n",
+    "    # desenha o modelo\n",
+    "    glDrawArrays(GL_TRIANGLES, ini_pato, fim_pato-ini_pato) ## renderizando"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1293,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def desenha_mesa():\n",
+    "    \n",
+    "    # rotacao\n",
+    "    angle = 0.0;\n",
+    "    r_x = 0.0; r_y = 1.0; r_z = 0.0;\n",
+    "    \n",
+    "    # translacao\n",
+    "    t_x = -4.0; t_y = -1.0; t_z = -4.5;\n",
+    "    \n",
+    "    # escala\n",
+    "    s_x = 6.0; s_y = 6.0; s_z = 6.0;\n",
+    "    \n",
+    "    mat_model = model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z)\n",
+    "    loc_model = glGetUniformLocation(program, \"model\")\n",
+    "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "       \n",
+    "    #define id da textura do modelo\n",
+    "    glBindTexture(GL_TEXTURE_2D, 18)\n",
+    "    \n",
+    "    # desenha o modelo\n",
+    "    glDrawArrays(GL_TRIANGLES, ini_mesa, fim_mesa-ini_mesa) ## renderizando"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -941,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 970,
+   "execution_count": 1294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 971,
+   "execution_count": 1295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 972,
+   "execution_count": 1296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1093,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 973,
+   "execution_count": 1297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,6 +1208,8 @@
     "    desenha_casa()\n",
     "    desenha_sofa()\n",
     "    desenha_tv()\n",
+    "    desenha_pato()\n",
+    "    desenha_mesa()\n",
     "    \n",
     "    rotacao_inc += 0.1\n",
     "    \n",
